--- a/contato.html
+++ b/contato.html
@@ -56,7 +56,7 @@
                 <div>
                     <a href="#"><i class="bi bi-envelope fs-3"></i></a>
                     <h3>Email:</h3>
-                    <p>invencible.site@gmail.com</p>
+                    <p>lacosdeacucar@gmail.com</p>
                 </div>
             </div>
 
@@ -64,7 +64,7 @@
                 <div>
                     <a href="#"><i class="bi bi-telephone fs-3"></i></a>
                     <h3>Telefone:</h3>
-                    <p>(18) 99876-6654</p>
+                    <p>(18) 99621-2232</p>
                 </div>
             </div>
 
