--- a/produtos.html
+++ b/produtos.html
@@ -51,21 +51,21 @@
 <section class="produtos d-flex justify-content-around">
     <div class="card">
         <div class="image"><img src="img/bolo1.jpg" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
+        <span class="title">Bolo de laranja</span>
+        <span class="price">$56</span>
     </div>
 
 
     <div class="card">
         <div class="image"><img src="img/bolo22.jfif" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
+        <span class="title">Bolo de chocolate</span>
+        <span class="price">$33</span>
     </div>
 
     <div class="card">
         <div class="image"><img src="img/bolo3.jfif" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
+        <span class="title">Combo 4/brigadeiros</span>
+        <span class="price">$19,90</span>
     </div>
 
 
@@ -74,20 +74,20 @@
 <section class="produtos d-flex justify-content-around">
     <div class="card">
         <div class="image"><img src="img/nut.jfif" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
+        <span class="title">Brownie</span>
+        <span class="price">$10,99</span>
     </div>
 
     <div class="card">
         <div class="image"><img src="img/macaco.jfif" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
+        <span class="title">Churros</span>
+        <span class="price">$7,14</span>
     </div>
 
     <div class="card">
-        <div class="image"><img src="img/bolo1.jpg" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
+        <div class="image"><img src="img/bolo5.jfif" alt="prod1" class="img-fluid"></div>
+        <span class="title">Donalds</span>
+        <span class="price">$3,99</span>
     </div>
 
 
@@ -95,21 +95,21 @@
 
 <section class="produtos d-flex justify-content-around">
     <div class="card">
-        <div class="image"><img src="img/bolo1.jpg" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
+        <div class="image"><img src="img/bolo4.jfif" alt="prod1" class="img-fluid"></div>
+        <span class="title">Brigadeiro de chocolate</span>
+        <span class="price">$24</span>
+    </div>
+
+    <div class="card">
+        <div class="image"><img src="img/macaco2.jfif" alt="prod1" class="img-fluid"></div>
+        <span class="title">Brownie de nutella</span>
+        <span class="price">$30</span>
     </div>
 
     <div class="card">
         <div class="image"><img src="img/bolo1.jpg" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
-    </div>
-
-    <div class="card">
-        <div class="image"><img src="img/bolo1.jpg" alt="prod1" class="img-fluid"></div>
-        <span class="title">Cool Chair</span>
-        <span class="price">$100</span>
+        <span class="title">Bolo de laranja</span>
+        <span class="price">$56</span>
     </div>
 
 </section>
