--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <ul class="mb-0">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
             </ul>
         </nav>
     </div>
@@ -194,8 +194,7 @@
                     2 day ago
                 </p>
                 <p class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur.
+                    gostei muito dos brownies! estão de parabéns.
                 </p>
             </div>
 
@@ -233,8 +232,7 @@
                     3 day ago
                 </p>
                 <p class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur.
+                    Produtos de muito quailidade, recomendo todos!!!
                 </p>
             </div>
 
@@ -273,13 +271,12 @@
                     4 day ago
                 </p>
                 <p class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur.
+                    Nosssssaaaa amigasss!!! adorei os brigadeiros, otimo atendimento.
                 </p>
             </div>
 
             <div class="author">
-                — Gabriel Rodrigues
+                — Gustava Alves
             </div>
         </div>
 
