--- a/produtos.html
+++ b/produtos.html
@@ -38,7 +38,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
             </ul>
         </nav>
     </div>
